--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Interview With AI</title>
+    <title>InterviewAI</title>
   </head>
   <body>
     <div id="root"></div>
